@@ -1,0 +1,37 @@
+/** Tests rematerialization of pointers to parameters infunctions with large return value
+    type: char, int, long , long long
+    msb: 0,1
+*/
+
+#include <testfwk.h>
+
+struct s
+{
+	{type} i;
+};
+
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+struct s f(struct s p) // Returned via extra hidden parameter
+{
+	p.i++; // Uses rematerialized address to parameter
+	return (p);
+}
+
+{type} g(struct s p) // Returned via extra hidden parameter for large return types only.
+{
+	p.i++; // Uses rematerialized address to parameter
+	return (p.i);
+}
+#endif
+
+void
+testRemat(void)
+{
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_mos6502) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // Todo: enable when struct parameters are supported!
+	struct s s;
+	s.i = 0;
+	ASSERT (f(s).i == 1);
+	ASSERT (g(s) == 1);
+#endif
+}
+
